--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
-{% block title %} Italian verbs of taking {% endblock %}
+{% block title %} Отношение к песням из топа {% endblock %}
 
 {% block content %}
-    <h1>We are conducting research about italian verbs of taking. To participate, please click the "Questionnaire" button.</h1>
+    <h1>Недавно несколько музыкальных площадок представили итоги года, поэтому нам стало интересно, кто их вообще слушает. Чтобы пройти опрос, перейдите на вкладку "Опрос" вверху.</h1>
 {% endblock %}
