--- a/templates/base.html
+++ b/templates/base.html
@@ -17,14 +17,14 @@
 <body>
     <!-- https://getbootstrap.com/docs/4.5/components/navbar/ -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Italian verbs of taking</a>
+      <a class="navbar-brand" href="#">Топ музыки 2022</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="/questions">Questions</a>
-          <a class="nav-link" href="/stats">Statistics</a>
+          <a class="nav-link" href="/questions">Опрос</a>
+          <a class="nav-link" href="/stats">Статистика</a>
         </div>
       </div>
     </nav>
